--- a/leaves.css
+++ b/leaves.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: #4E4226;
+    background-color: #0055BB;
 }
 
 #container {
@@ -9,8 +9,8 @@ body
     width: 500px;
     margin: 0px auto;
     overflow: hidden;
-    border: 4px solid #5C090A;
-    background: #4E4226 url('images/backgroundLeaves.jpg') no-repeat top left;
+    border: 4px solid #000000;
+    background: #0055BB url('images/backgroundLeaves.jpg') no-repeat top left;
 }
 
 /* Defines the position and dimensions of the leafContainer div */
@@ -67,8 +67,8 @@ em
 #leafContainer > div 
 {
     position: absolute;
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     
     /* We use the following properties to apply the fade and drop animations to each leaf.
        Each of these properties takes two values. These values respectively match a setting
